# Cpp-API-Template

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  main.cpp  neko.cpp
.github/workflows/: docker-build.yaml
docs/: info.md
include/crow/: common.h  http_connection.h
src/: base_endpoints.cpp  implimentation_testing.cpp  logger.cpp
utils/: base_endpoints.h  implimentation_testing.h  logger.h
